Initial working after migrating to ebiten v2

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 # Test binary, build with `go test -c`
 *.test
 *.vscode
-debug
+*debug*
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
